# elliot

./: .gitignore  .gitmodules  CMakeLists.txt  build_llvm.sh
examples/: build.sh  kernel.mlir  main.cpp  test_matrix.mtx
include/: CMakeLists.txt
include/Elliot/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Runtime/: CMakeLists.txt  ElliotRuntime.cpp
lib/Transforms/: CMakeLists.txt  ConvertSpMMToElliotJit.cpp  ConvertSpMVToElliotJit.cpp
tools/: CMakeLists.txt
tools/elliot-opt/: CMakeLists.txt  elliot-opt.cpp
